--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 variables:
-    azureSubscriptionEndpoint: Contoso
+    azureSubscriptionEndpoint: pipelines-resource-manager
     azureContainerRegistry: myacrschoewe.azurecr.io
 
 steps:
