--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,3 +51,5 @@ steps:
     azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
     azureContainerRegistry: $(azureContainerRegistry)
     imageName: $(Build.Repository.Name):$(Build.BuildId)
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifacts: drop'
