Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,3 +53,4 @@ steps:
     imageName: $(Build.Repository.Name):$(Build.BuildId)
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifacts: drop'
+  name: websocket-drop
