--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,4 +63,4 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathtoPublish: $(Build.ArtifactStagingDirectory)
-    artifactName: MyBuildOutputs
+    artifactName: drop
